[tool.poetry] 
name = "practical01" 
version = "0.1.0" 
description = "" 
authors = ["Evan Hughes <uqehugh3@uq.edu.au>"] 
readme = "README.md" 

[tool.poetry.dependencies] 
python = "^3.10" 
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"

[build-system] 
requires = ["poetry-core"] 
build-backend = "poetry.core.masonry.api"
 
